# Universal_SDL3

./: .dockerignore  .env  .gitignore  CMakeLists.txt  DONE.md  Debugging_TODO.md  Dockerfile  LICENSE  LibrariesDetails.md  Makefile  OldDockerfile.md  PortOverLater.md  README.md  TODO.md  debug_runtime.sh  fb-wrapper.sh  main.cpp  main.hpp  properties.json  wifidetect.py
cmake/: check_fop.java
docs/: APKList.md  Debugging_TODO.md  DockerCommands.md  HowToContribute.md  HowToRun.md  LinuxBuildDocs.md  Manifest_Standards.md  Symlink_Standards.md  Sysroot_Documentation.md  SystemSchema.md
docs/Code Standards/: Checkout_Standards.md
kern/: boot.asm  lilyspark_kern.c  linker.ld
patches/: Jack2_Wrapper.cpp
setup-scripts/: CMake_PathSearch.sh  apk-retry.sh  binlib_validator.sh  cflag_audit.sh  check-filesystem.sh  check_architecture.sh  check_llvm15.sh  check_x86.sh  conflict_trigger.sh  context_inspector.sh  create-filesystem.sh  dep_chain_visualizer.sh  dependency_checker.sh  env_tracer.sh  failure_reconstructor.sh  fb-wrapper.sh  file_diff_analyzer.sh  file_finder.sh  fop-wrapper.sh  invalid_cache_checker.sh  layer_bloat_analyzer.sh  prov_tracer.sh  sgid_suid_scanner.sh  src_fetch.sh  stage_went_wrong_tracer.sh  symbol_gen_check.sh  thread_optimizer.sh  version_matrix.sh
src/: CMakeLists.txt
